// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LayoutSpacer /> should render a layout spacer with no spacing sizes defined 1`] = `
.c0 {
  margin-bottom: 0px;
}

.c0:last-child {
  margin-bottom: 0px;
}

<LayoutSpacer
  contentItems={
    Array [
      Object {
        "content": <div>
          a
        </div>,
      },
      Object {
        "content": <div>
          b
        </div>,
      },
    ]
  }
>
  <div
    data-component-type="layout_spacer"
  >
    <styled.div
      data-component-type="layout_spacer_item"
      key="0"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <div
          className="c0"
          data-component-type="layout_spacer_item"
        >
          <div>
            a
          </div>
        </div>
      </StyledComponent>
    </styled.div>
    <styled.div
      data-component-type="layout_spacer_item"
      key="1"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <div
          className="c0"
          data-component-type="layout_spacer_item"
        >
          <div>
            b
          </div>
        </div>
      </StyledComponent>
    </styled.div>
  </div>
</LayoutSpacer>
`;

exports[`<LayoutSpacer /> should render a layout spacer with null content 1`] = `
.c0 {
  margin-bottom: 0px;
}

.c0:last-child {
  margin-bottom: 0px;
}

<LayoutSpacer
  contentItems={
    Array [
      Object {
        "content": null,
        "spacingSize": "medium",
      },
      Object {
        "content": <div>
          a
        </div>,
      },
    ]
  }
>
  <div
    data-component-type="layout_spacer"
  >
    <styled.div
      data-component-type="layout_spacer_item"
      key="1"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <div
          className="c0"
          data-component-type="layout_spacer_item"
        >
          <div>
            a
          </div>
        </div>
      </StyledComponent>
    </styled.div>
  </div>
</LayoutSpacer>
`;

exports[`<LayoutSpacer /> should render a layout spacer with varying spacing sizes 1`] = `
.c0 {
  margin-bottom: 8px;
}

.c0:last-child {
  margin-bottom: 0px;
}

.c1 {
  margin-bottom: 12px;
}

.c1:last-child {
  margin-bottom: 0px;
}

.c2 {
  margin-bottom: 16px;
}

.c2:last-child {
  margin-bottom: 0px;
}

.c3 {
  margin-bottom: 24px;
}

.c3:last-child {
  margin-bottom: 0px;
}

.c4 {
  margin-bottom: 32px;
}

.c4:last-child {
  margin-bottom: 0px;
}

.c5 {
  margin-bottom: 40px;
}

.c5:last-child {
  margin-bottom: 0px;
}

.c6 {
  margin-bottom: 56px;
}

.c6:last-child {
  margin-bottom: 0px;
}

.c7 {
  margin-bottom: 0px;
}

.c7:last-child {
  margin-bottom: 0px;
}

<LayoutSpacer
  contentItems={
    Array [
      Object {
        "content": <div>
          a
        </div>,
        "spacingSize": "3xsmall",
      },
      Object {
        "content": <div>
          b
        </div>,
        "spacingSize": "2xsmall",
      },
      Object {
        "content": <div>
          c
        </div>,
        "spacingSize": "xsmall",
      },
      Object {
        "content": <div>
          d
        </div>,
        "spacingSize": "small",
      },
      Object {
        "content": <div>
          e
        </div>,
        "spacingSize": "medium",
      },
      Object {
        "content": <div>
          f
        </div>,
        "spacingSize": "large",
      },
      Object {
        "content": <div>
          g
        </div>,
        "spacingSize": "xlarge",
      },
      Object {
        "content": <div>
          h
        </div>,
      },
    ]
  }
>
  <div
    data-component-type="layout_spacer"
  >
    <styled.div
      data-component-type="layout_spacer_item"
      key="0"
      spacingSize="3xsmall"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c7",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        spacingSize="3xsmall"
      >
        <div
          className="c0"
          data-component-type="layout_spacer_item"
        >
          <div>
            a
          </div>
        </div>
      </StyledComponent>
    </styled.div>
    <styled.div
      data-component-type="layout_spacer_item"
      key="1"
      spacingSize="2xsmall"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c7",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        spacingSize="2xsmall"
      >
        <div
          className="c1"
          data-component-type="layout_spacer_item"
        >
          <div>
            b
          </div>
        </div>
      </StyledComponent>
    </styled.div>
    <styled.div
      data-component-type="layout_spacer_item"
      key="2"
      spacingSize="xsmall"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c7",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        spacingSize="xsmall"
      >
        <div
          className="c2"
          data-component-type="layout_spacer_item"
        >
          <div>
            c
          </div>
        </div>
      </StyledComponent>
    </styled.div>
    <styled.div
      data-component-type="layout_spacer_item"
      key="3"
      spacingSize="small"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c7",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        spacingSize="small"
      >
        <div
          className="c3"
          data-component-type="layout_spacer_item"
        >
          <div>
            d
          </div>
        </div>
      </StyledComponent>
    </styled.div>
    <styled.div
      data-component-type="layout_spacer_item"
      key="4"
      spacingSize="medium"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c7",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        spacingSize="medium"
      >
        <div
          className="c4"
          data-component-type="layout_spacer_item"
        >
          <div>
            e
          </div>
        </div>
      </StyledComponent>
    </styled.div>
    <styled.div
      data-component-type="layout_spacer_item"
      key="5"
      spacingSize="large"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c7",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        spacingSize="large"
      >
        <div
          className="c5"
          data-component-type="layout_spacer_item"
        >
          <div>
            f
          </div>
        </div>
      </StyledComponent>
    </styled.div>
    <styled.div
      data-component-type="layout_spacer_item"
      key="6"
      spacingSize="xlarge"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c7",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        spacingSize="xlarge"
      >
        <div
          className="c6"
          data-component-type="layout_spacer_item"
        >
          <div>
            g
          </div>
        </div>
      </StyledComponent>
    </styled.div>
    <styled.div
      data-component-type="layout_spacer_item"
      key="7"
    >
      <StyledComponent
        data-component-type="layout_spacer_item"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c7",
              "rules": Array [
                "
  margin-bottom: ",
                [Function],
                "px;

  &:last-child {
    margin-bottom: 0px;
  }
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "usesTheme": false,
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <div
          className="c7"
          data-component-type="layout_spacer_item"
        >
          <div>
            h
          </div>
        </div>
      </StyledComponent>
    </styled.div>
  </div>
</LayoutSpacer>
`;
